Fix center logo getting dragged on mobile

--- a/frontend/src/app/components/dashboard/_dashboard.scss
+++ b/frontend/src/app/components/dashboard/_dashboard.scss
@@ -37,6 +37,7 @@ $highlight-color: #FF8000;
 @import './overview';
 @import './sidebar';
 @import './settings';
+@import './modal';
 
 .dashboard {
     display: flex;
@@ -59,6 +60,7 @@ $highlight-color: #FF8000;
 .center-logo {
     position: absolute;
     width: 60%;
+    top: 0;
     z-index: 10000000;
     display: flex;
     justify-content: center;
@@ -161,40 +163,6 @@ $highlight-color: #FF8000;
             }
         }
     }
-}
-
-.dashboard-modal {
-    $width: 65rem;
-    $height: 30rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    border-radius: 1rem;
-    margin-top: -($height/2);
-    margin-left: -($width/2);
-    width: $width;
-    height: $height;
-    background-color: white;
-    padding: 2rem;
-    @include box-shadow-dash();
-    @media (max-width:70rem) {
-        width: 95%;
-        height: 90%;
-        top: 5%;
-        left: 2.5%;
-        margin-top: 0;
-        margin-left: 0;
-    }
-}
-
-.modal-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba($color: #000000, $alpha: 0.5);
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
 }
 
 .dropdown-nav-link {
